# Pixpilot

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
.claude/: CLAUDE.md  PLAN_models_page.md  PRD_v0.5_Beta.md  PRD_v1_Image_Pipeline.md  VISION_AGENT_IMPLEMENTATION.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: revise.py  runs.py  settings.py  sse.py  uploads.py
backend/app/core/: run_manager.py  settings.py  workspace.py
backend/app/pipeline/: graph.py  manager.py
backend/app/pipeline/agents/: image_designer.py  summary_agent.py  vision_orchestrator.py  vision_provider.py
backend/app/pipeline/agents/providers/: anthropic_provider.py  google_provider.py  openai_provider.py
backend/app/pipeline/processors/: __init__.py  image.py  model.py  text.py  video.py
backend/tests/: conftest.py  test_image_designer.py  test_image_serving.py  test_pipeline.py  test_processors.py  test_revise.py  test_runs_submit.py  test_settings_api.py  test_sse.py  test_summary_agent.py  test_uploads.py  test_vision_agent.py
content/: workspace_settings.json
data_processing/: image.py  text.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/submit/: page.tsx
frontend/lib/: sse.ts  submit.ts  upload.ts
services/ffmpeg/: Dockerfile  server.py
services/renderer/: Dockerfile  entrypoint.sh  package.json
testing/: test_image.py  test_text.py
(+38 files in other folders)
